# platform.adaptation.samsung_exynos.audio-hal-wm5110

./: Makefile.am  audio-hal-wm5110.manifest  audio_hal_sys_file_access.efl  configure.ac  tizen-audio-device.c  tizen-audio-impl-pcm.c  tizen-audio-impl.h  tizen-audio-internal.h  tizen-audio-pcm.c  tizen-audio-routing.c  tizen-audio-session.c  tizen-audio-stream.c  tizen-audio-ucm.c  tizen-audio-util.c  tizen-audio-volume.c  tizen-audio.c  tizen-audio.h
packaging/: audio-hal-wm5110.spec
